--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ readme = "README.md"
 [dependencies]
 anyhow = {version = "1", features = ["backtrace"]}
 log = "0.4"
-esp-idf-sys = { version = "0.31", features = ["binstart"] }
-esp-idf-hal = "0.36"
+esp-idf-sys = { version = "0.32", features = ["binstart"] }
+esp-idf-hal = "0.40"
 
 [build-dependencies]
-embuild = "0.28.2"
+embuild = { version = "0.31", features = ["elf"] }
 anyhow = "1"
 
