--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "esp32-sdcard"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["hammer90"]
 edition = "2021"
 categories = ["embedded", "hardware-support"]
@@ -13,12 +13,11 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = {version = "1", features = ["backtrace"]}
+anyhow = { version = "1.0.98", features = ["backtrace"] }
 log = "0.4"
-esp-idf-sys = { version = "0.34", features = ["binstart"] }
-esp-idf-hal = "0.43"
+esp-idf-hal = "0.44.1"
+esp-idf-sys = "0.35.0"
 
 [build-dependencies]
-embuild = { version = "0.31", features = ["elf"] }
-anyhow = "1"
-
+embuild = { version = "0.32.0", features = ["elf"] }
+anyhow = "1.0.98"
